--- a/dubbo-client/pom.xml
+++ b/dubbo-client/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>demo</artifactId>
         <groupId>com.example</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>dubbo-client</artifactId>
